Auto connect to Kodi host. Version 0.9.1.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
 
-	<title>JSON-RPC Browser - v0.9</title>
+	<title>JSON-RPC Browser - v0.9.1</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">JSON-RPC Browser - v0.9</a>
+				<a class="navbar-brand" href="#">JSON-RPC Browser - v0.9.1</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
@@ -75,15 +75,15 @@
 								<legend>Server</legend>
 								<div class="form-group">
 									<label for="name">Name</label>
-									<input type="text" class="form-control" id="name" placeholder="Name" value="Name Here">
+									<input type="text" class="form-control" id="name" placeholder="Kodi" value="">
 								</div>
 								<div class="form-group">
 									<label for="ajaxUrl">Ajax End Point</label>
-									<input type="text" class="form-control" id="ajaxEndPoint" placeholder="http://localhost:8152" value="http://localhost:8152">
+									<input type="text" class="form-control" id="ajaxEndPoint" placeholder="http://kodi.local:8080" value="">
 								</div>
 								<div class="form-group">
 									<label for="socketEndPoint">Web Sockets End Point</label>
-									<input type="text" class="form-control" id="socketEndPoint" placeholder="ws://localhost:9090" value="ws://localhost:9090">
+									<input type="text" class="form-control" id="socketEndPoint" placeholder="ws://kodi.local:9090" value="">
 								</div>
 								<div class="form-group">
 									<label for="path">Path</label>
